00-voting-app/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: voting-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"
  rules:
  - host: voting-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
              name: vote
              port:
                number: 5000
